# tuigps

./: .gitignore  CLAUDE.md  README.md  RUST_REWRITE_ANALYSIS.md  pyproject.toml
docs/: dashboard.md  device.md  nmea.md  satellites.md  timing.md
src/tuigps/: __init__.py  __main__.py  app.py  app.tcss  clock_sync.py  constants.py  data_model.py  formatting.py  gps_logger.py  gpsd_client.py  position_hold.py
src/tuigps/screens/: main_screen.py  settings_screen.py
src/tuigps/widgets/: connection_status.py  constellation_panel.py  device_config.py  device_panel.py  error_panel.py  fix_panel.py  nmea_viewer.py  position_panel.py  satellite_table.py  signal_chart.py  sky_plot.py  time_panel.py  velocity_panel.py
